--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.5.9",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "node-uuid": "^1.4.7"
   }
 }
