--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "moment": "^2.14.1",
     "react": "15.2.1",
     "react-native": "0.31.0",
+    "react-native-material-kit": "^0.3.2",
+    "react-native-toast": "^1.0.1",
     "react-native-vector-icons": "^2.0.3",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2"
