--- a/mobile/android/settings.gradle
+++ b/mobile/android/settings.gradle
@@ -1,6 +1,8 @@
 rootProject.name = 'Playground'
 
 include ':app'
+include ':react-native-paypal'
+project(':react-native-paypal').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-paypal/android')
 include ':react-native-toast'
 project(':react-native-toast').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-toast/android')
 include ':react-native-material-kit'
