--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -126,6 +126,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-push-notification')
     compile project(':react-native-paypal')
     compile project(':react-native-toast')
     compile project(':react-native-material-kit')
