--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,9 +10,11 @@
     "moment": "^2.14.1",
     "react": "15.2.1",
     "react-native": "0.31.0",
+    "react-native-crypto": "^2.0.1",
     "react-native-material-kit": "^0.3.2",
     "react-native-paypal": "^1.0.3",
     "react-native-push-notification": "^2.0.2",
+    "react-native-randombytes": "^2.1.0",
     "react-native-toast": "^1.0.1",
     "react-native-vector-icons": "^2.0.3",
     "react-redux": "^4.4.5",
