--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,6 +18,7 @@
     "react-native-toast": "^1.0.1",
     "react-native-vector-icons": "^2.0.3",
     "react-redux": "^4.4.5",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "redux-persist": "^3.5.0"
   }
 }
