--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "backend for mobile app",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build-client": "cd client && gulp"
   },
   "author": "dmitrysl",
   "license": "MIT",
