--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build-client": "cd client && gulp"
+    "build-client": "cd client && gulp && cd .."
   },
   "author": "dmitrysl",
   "license": "MIT",
