--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "Playground for react native, nodejs, angular2.",
   "main": "index.js",
   "scripts": {
-    "start": "cd server && npm start",
-    "build-client": "cd server && npm build-client && cd ..",
-    "build-mobile": "cd mobile && npm start && cd .."
+    "test": "echo No actions"
   },
   "keywords": [
     "playground",
