--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,8 +8,8 @@
   "dependencies": {
     "crypto": "0.0.3",
     "moment": "^2.14.1",
-    "react": "15.2.1",
-    "react-native": "0.31.0",
+    "react": "~15.3.0",
+    "react-native": "0.32.0",
     "react-native-crypto": "^2.0.1",
     "react-native-material-kit": "^0.3.2",
     "react-native-paypal": "^1.0.3",
