--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
 install: true
 before_script:
   - npm install -g react-native gulp
-  - npm install
+  # - npm install
 script:
   - pwd
   - ./mobile/build-mobile.sh
