--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,54 @@
 language: node_js
-git:
-  depth: 3
-branches:
-  only:
-  - master
+
 node_js:
   - 6.5.0
+
+android:
+  components:
+    - build-tools-23.0.1
+    - android-23
+    - add-on
+    - extra
+  licenses:
+    - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
+
 env:
   global:
     - NODE_ENV=production
-before_install:
+
+git:
+  depth: 3
+
+branches:
+  only:
+  - master
+
+before_cache:
+  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+    
+# Emulator Management: Create, Start and Wait
+before_script:
   # - npm run init
   # - sudo apt-get update -qq
+  - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+
 install: true
+
 before_script:
   - npm install -g react-native-cli gulp
   # - npm install
+
 script:
   - ./mobile/build-mobile.sh
   - ./server/client/build-client.sh
+
 sudo: false    
