--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
-language: node_js
+language: android
+
+env:
+  global:
+    - TRAVIS_NODE_VERSION="6.5.0"
+    - NODE_ENV=production
 
 node_js:
   - 6.5.0
@@ -14,16 +19,12 @@ android:
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
 
-env:
-  global:
-    - NODE_ENV=production
-
 git:
   depth: 3
 
 branches:
   only:
-  - master
+    - master
 
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
@@ -31,21 +32,21 @@ cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
-    
+    - node_modules
+
+install:
+  - sudo add-apt-repository -y ppa:chris-lea/node.js
+  - sudo apt-get -y update
+  - sudo apt-get -y install nodejs
+  - sudo npm install -g gulp
+
 # Emulator Management: Create, Start and Wait
 before_script:
-  # - npm run init
-  # - sudo apt-get update -qq
+  - npm install -g react-native-cli
   - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
-
-install: true
-
-before_script:
-  - npm install -g react-native-cli gulp
-  # - npm install
 
 script:
   - ./mobile/build-mobile.sh
