--- a/.travis.yml
+++ b/.travis.yml
@@ -39,14 +39,14 @@ install:
   #- sudo apt-get install -y nodejs
   - nvm install 6.5.0
   - node -v
+  - npm -v
   #- sudo add-apt-repository -y ppa:chris-lea/node.js
   #- sudo apt-get -y update
   #- sudo apt-get -y install nodejs
-  - sudo npm install -g gulp
 
 # Emulator Management: Create, Start and Wait
 before_script:
-  - npm install -g react-native-cli
+  - npm install -g react-native-cli gulp
   - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
