--- a/.travis.yml
+++ b/.travis.yml
@@ -47,8 +47,8 @@ install:
 # Emulator Management: Create, Start and Wait
 before_script:
   - npm install -g react-native-cli gulp
-  - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
-  - emulator -avd test -no-audio -no-window &
+  - echo no | android create avd --force -n test-device-48-x86 -t 48 --abi google_apis/x86_64
+  - emulator -avd test-device-48-x86 -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
