--- a/.travis.yml
+++ b/.travis.yml
@@ -49,8 +49,9 @@ install:
 before_script:
   #- npm install -g react-native-cli gulp
   - android list targets
-  - echo no | android create avd --force -n test-device-48-x86 -t 48 --abi google_apis/x86_64
-  - emulator -avd test-device-48-x86 -no-audio -no-window &
+  - echo no | android create avd --force -n test-device-18-x86 -t 18
+  #- echo no | android create avd --force -n test-device-18-x86 -t 48 --abi google_apis/x86_64
+  - emulator -avd test-device-18-x86 -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
