--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,10 @@ install:
 before_script:
   #- npm install -g react-native-cli gulp
   - android list targets
-  - echo no | android create avd --force -n test-device-18-x86 -t 18
+  - android list sdk --extended --no-ui --all
+  - echo "y" | android update sdk -a --no-ui --filter sys-img-armeabi-v7a-google_apis-23,sys-img-x86_64-google_apis-23
+  - android list targets
+  - echo no | android create avd --force -n test-device-18-x86 -t 18 --abi google_apis/x86_64
   #- echo no | android create avd --force -n test-device-18-x86 -t 48 --abi google_apis/x86_64
   - emulator -avd test-device-18-x86 -no-audio -no-window &
   - android-wait-for-emulator
