--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ android:
     - android-23
     - add-on
     - extra
+    - extra-android-m2repository
+    - sys-img-armeabi-v7a-android-23
+    - sys-img-x86_64-google_apis-23
   licenses:
     - 'android-sdk-preview-license-52d11cd2'
     - 'android-sdk-license-.+'
@@ -48,18 +51,33 @@ install:
 # Emulator Management: Create, Start and Wait
 before_script:
   #- npm install -g react-native-cli gulp
-  - android list targets
-  - android list sdk --extended --no-ui --all
-  - echo "y" | android update sdk -a --no-ui --filter sys-img-armeabi-v7a-google_apis-23,sys-img-x86_64-google_apis-23
-  - android list targets
-  - echo no | android create avd --force -n test-device-9-x86 -t 9 --abi google_apis/x86_64
-  #- echo no | android create avd --force -n test-device-18-x86 -t 48 --abi google_apis/x86_64
-  - emulator -avd test-device-9-x86 -no-audio -no-window &
+  - echo no | android create avd --force --name test --target android-23 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window -no-boot-anim &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
+  - android list targets
+  - android list sdk --extended --no-ui --all
+  #- echo "y" | android update sdk -a --no-ui --filter sys-img-armeabi-v7a-google_apis-23,sys-img-x86_64-google_apis-23
+  #- android list targets
+  #- echo no | android create avd --force -n test -t android-23 --abi google_apis/x86_64
+  #- emulator -avd test -no-skin -no-audio -no-window &
+  #- curl http://is.gd/android_wait_for_emulator > android-wait-for-emulator
+  #- chmod u+x android-wait-for-emulator
+  #- ./android-wait-for-emulator
+  #- adb shell input keyevent 82 &
+
 script:
-  - ./mobile/build-mobile.sh
-  - ./server/client/build-client.sh
+  - cd mobile/android
+  - ./gradlew build connectedCheck --stacktrace
+  #- ./mobile/build-mobile.sh
+  #- ./server/client/build-client.sh
+
+after_script:
+  # run tests  against the emulator
+  #- cd mobile/android
+  #- ./gradlew connectedAndroidTest
+  # run tests  against the JVM
+  #- ./gradlew test
 
 #sudo: false
