--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,7 @@ install:
 before_script:
   #- npm install -g react-native-cli gulp
   - echo no | android create avd --force --name test --target android-23 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window -no-boot-anim &
+  - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
@@ -62,9 +62,7 @@ before_script:
   #- android list targets
   #- echo no | android create avd --force -n test -t android-23 --abi google_apis/x86_64
   #- emulator -avd test -no-skin -no-audio -no-window &
-  #- curl http://is.gd/android_wait_for_emulator > android-wait-for-emulator
-  #- chmod u+x android-wait-for-emulator
-  #- ./android-wait-for-emulator
+  #- android-wait-for-emulator
   #- adb shell input keyevent 82 &
 
 script:
