--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -143,6 +143,11 @@ android {
             }
         }
     }
+    // This enables long timeouts required on slow environments, e.g. Travis
+    adbOptions {
+        timeOutInMs 20 * 60 * 1000  // 20 minutes
+        installOptions "-d","-t"
+    }
 }
 
 dependencies {
