--- a/.travis.yml
+++ b/.travis.yml
@@ -53,11 +53,11 @@ before_script:
   #- npm install -g react-native-cli gulp
   - echo no | android create avd --force --name test --target android-23 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+  #- android-wait-for-emulator
+  #- adb shell input keyevent 82 &
 
-  - android list targets
-  - android list sdk --extended --no-ui --all
+  #- android list targets
+  #- android list sdk --extended --no-ui --all
   #- echo "y" | android update sdk -a --no-ui --filter sys-img-armeabi-v7a-google_apis-23,sys-img-x86_64-google_apis-23
   #- android list targets
   #- echo no | android create avd --force -n test -t android-23 --abi google_apis/x86_64
