--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ before_script:
   - echo no | android create avd --force --name test --target android-23 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   #- android-wait-for-emulator
-  #- adb shell input keyevent 82 &
+  - adb shell input keyevent 82 &
 
   #- android list targets
   #- android list sdk --extended --no-ui --all
@@ -66,10 +66,11 @@ before_script:
   #- adb shell input keyevent 82 &
 
 script:
-  - cd mobile/android
-  - ./gradlew build connectedCheck --stacktrace
-  #- ./mobile/build-mobile.sh
-  #- ./server/client/build-client.sh
+  #- cd mobile/android
+  #- ./gradlew build connectedCheck --stacktrace
+  - ./mobile/build-mobile.sh
+  - ./mobile/android/android-test.sh
+  - ./server/client/build-client.sh
 
 after_script:
   # run tests  against the emulator
