--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,7 @@ install:
 # Emulator Management: Create, Start and Wait
 before_script:
   #- npm install -g react-native-cli gulp
+  - adb shell pm list instrumentation
   - echo no | android create avd --force --name test --target android-23 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   #- android-wait-for-emulator
@@ -68,9 +69,9 @@ before_script:
 script:
   #- cd mobile/android
   #- ./gradlew build connectedCheck --stacktrace
+  - ./server/client/build-client.sh
   - ./mobile/build-mobile.sh
   - ./mobile/android/android-test.sh
-  - ./server/client/build-client.sh
 
 after_script:
   # run tests  against the emulator
