--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -1,4 +1,15 @@
+buildscript {
+    repositories {
+      jcenter()
+    }
+    dependencies {
+        // the latest version of the android-apt plugin
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
+    }
+}
+
 apply plugin: "com.android.application"
+apply plugin: 'com.neenbedankt.android-apt'
 
 import com.android.build.OutputFile
 
@@ -99,13 +110,14 @@ android {
 
     defaultConfig {
         applicationId "com.playground"
-        minSdkVersion 16
+        minSdkVersion 18
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
         ndk {
-            abiFilters "armeabi-v7a", "x86"
+            abiFilters "armeabi-v7a", "x86", "x86_64"
         }
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     signingConfigs {
         config {
@@ -175,9 +187,33 @@ dependencies {
     compile project(':react-native-toast')
     compile project(':react-native-material-kit')
     compile project(':react-native-vector-icons')
+    compile "com.facebook.react:react-native:+"  // From node_modules
+
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:24.2.0"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    compile 'com.android.support:design:24.2.0'
+    compile 'com.android.support:cardview-v7:24.2.0'
+    compile 'com.android.support:recyclerview-v7:24.2.0'
+    compile 'com.squareup:otto:1.3.8'
+    apt 'com.google.dagger:dagger-compiler:2.0.1'
+    compile 'javax.annotation:javax.annotation-api:1.2'
+    compile 'io.reactivex:rxandroid:1.0.1'
+    compile 'io.reactivex:rxjava:1.0.14'
+    compile 'com.google.android.gms:play-services-location:8.1.0'
+    compile 'com.google.android.gms:play-services-gcm:8.1.0'
+    //compile 'org.apache.commons:commons-lang3:3.4'
+    testCompile 'junit:junit:4.12'
+    androidTestCompile 'com.android.support:support-annotations:24.2.0'
+    androidTestCompile 'com.android.support.test:runner:0.4' 
+    //{
+        // Necessary if your app targets Marshmallow (since the test runner
+        // hasn't moved to Marshmallow yet)
+    //    exclude group: 'com.android.support', module: 'support-annotations'
+    //}
+    //androidTestCompile 'com.android.support.test:rules:0.4'
+    androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
 }
 
 // Run this once to be able to run the application with BUCK
