--- a/.travis.yml
+++ b/.travis.yml
@@ -55,7 +55,7 @@ before_script:
   - echo no | android create avd --force --name test --target android-23 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   #- android-wait-for-emulator
-  - adb shell input keyevent 82 &
+  #- adb shell input keyevent 82 &
 
   #- android list targets
   #- android list sdk --extended --no-ui --all
