--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ install:
 # Emulator Management: Create, Start and Wait
 before_script:
   #- npm install -g react-native-cli gulp
-  - adb shell pm list instrumentation
+  #- adb shell pm list instrumentation
   - echo no | android create avd --force --name test --target android-23 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   #- android-wait-for-emulator
