--- a/.travis.yml
+++ b/.travis.yml
@@ -54,8 +54,8 @@ before_script:
   #- adb shell pm list instrumentation
   - echo no | android create avd --force --name test --target android-23 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
-  #- android-wait-for-emulator
-  #- adb shell input keyevent 82 &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 
   #- android list targets
   #- android list sdk --extended --no-ui --all
