--- a/.travis.yml
+++ b/.travis.yml
@@ -59,7 +59,7 @@ before_script:
   #- npm install -g react-native-cli gulp
   #- adb shell pm list instrumentation
   - echo no | android create avd --force --name test --target android-23 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window &
+  - emulator -avd test -no-skin -no-audio -no-window -debug avd_config,init,nand_limits &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
