--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,12 @@ android:
     - android-23
     - add-on
     - extra
+    - extra-google-google_play_services
+    - extra-google-m2repository
     - extra-android-m2repository
+    - addon-google_apis-google-23
     - sys-img-armeabi-v7a-android-23
-    - sys-img-x86_64-google_apis-23
+    #- sys-img-x86_64-google_apis-23
   licenses:
     - 'android-sdk-preview-license-52d11cd2'
     - 'android-sdk-license-.+'
@@ -44,6 +47,10 @@ cache:
     - $HOME/.gradle/wrapper/
     - node_modules
 
+before_install:
+  - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
+  - emulator -avd test -data /home/travis/.android/avd/test.avd/userdata-qemu.im/userdata.img -no-skin -no-audio -no-window &
+
 install:
   #- curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
   #- sudo apt-get install -y nodejs
@@ -58,8 +65,8 @@ install:
 before_script:
   #- npm install -g react-native-cli gulp
   #- adb shell pm list instrumentation
-  - echo no | android create avd --force --name test --target android-23 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window -data /home/travis/.android/avd/test.avd/userdata-qemu.im/userdata.img -debug avd_config,init,nand_limits &
+  #- echo no | android create avd --force --name test --target android-23 --abi armeabi-v7a
+  #- emulator -avd test -no-skin -no-audio -no-window -data /home/travis/.android/avd/test.avd/userdata-qemu.im/userdata.img -debug avd_config,init,nand_limits &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
