--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -3,6 +3,7 @@ buildscript {
       jcenter()
     }
     dependencies {
+        classpath 'com.android.tools.build:gradle:2.1.0'
         // the latest version of the android-apt plugin
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
     }
