--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ branches:
 
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
-  - rm -f $HOME/.gradle
+#  - rm -f $HOME/.gradle
 cache:
   directories:
     - $HOME/.gradle/caches/
