upgrade version of react-native to the latest

--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -115,6 +115,7 @@ android {
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         ndk {
             abiFilters "armeabi-v7a", "x86", "x86_64"
         }
@@ -161,6 +162,9 @@ android {
         timeOutInMs 20 * 60 * 1000  // 20 minutes
         installOptions "-d", "-t"
     }
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
 }
 
 configure(android.lintOptions) {
@@ -188,6 +192,7 @@ dependencies {
     compile project(':react-native-toast')
     compile project(':react-native-material-kit')
     compile project(':react-native-vector-icons')
+    compile 'com.android.support:multidex:1.0.1'
     compile 'com.facebook.react:react-native:+'
     // From node_modules
     compile fileTree(include: ['*.jar'], dir: 'libs')
@@ -200,8 +205,11 @@ dependencies {
     compile 'javax.annotation:javax.annotation-api:1.2'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.10'
-    compile 'com.google.android.gms:play-services-location:8.1.0'
-    compile 'com.google.android.gms:play-services-gcm:8.1.0'
+    //compile 'com.google.android.gms:play-services:10.0.1'
+    compile 'com.google.android.gms:play-services-location:10.0.1'
+    compile 'com.google.android.gms:play-services-gcm:10.0.1'
+    //compile 'com.google.android.gms:play-services-location:8.1.0'
+    //compile 'com.google.android.gms:play-services-gcm:8.1.0'
     //compile 'org.apache.commons:commons-lang3:3.4'
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support:support-annotations:24.2.0'
