--- a/mobile/package.json
+++ b/mobile/package.json
@@ -6,20 +6,20 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "crypto": "0.0.3",
-    "moment": "^2.14.1",
-    "react": "~15.3.0",
-    "react-native": "0.33.0",
+    "crypto": "^0.0.3",
+    "moment": "^2.17.1",
+    "react": "~15.4.2",
+    "react-native": "^0.40.0",
     "react-native-crypto": "^2.0.1",
-    "react-native-material-kit": "^0.3.2",
+    "react-native-material-kit": "^0.4.1",
     "react-native-paypal": "^1.0.3",
-    "react-native-push-notification": "^2.0.2",
-    "react-native-randombytes": "^2.1.0",
+    "react-native-push-notification": "^2.2.1",
+    "react-native-randombytes": "^2.2.0",
     "react-native-stripe": "^1.2.1",
     "react-native-toast": "^1.0.1",
-    "react-native-vector-icons": "^2.0.3",
-    "react-redux": "^4.4.5",
-    "redux": "^3.5.2",
-    "redux-persist": "^3.5.0"
+    "react-native-vector-icons": "^4.0.0",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
+    "redux-persist": "^4.1.0"
   }
 }
